# pybr-talk-proposal-outbox

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  rabbitmq-init.sh
left_feet/estoque/: asgi.py  settings.py
left_feet/estoque/app/: apps.py  models.py  pubsub.py
left_feet/pagamentos/: asgi.py  settings.py
left_feet/pagamentos/app/: apps.py  models.py  pubsub.py
left_feet/pedidos/: settings.py  urls.py
left_feet/pedidos/app/: apps.py  models.py
saga-outbox-example/estoque/: wsgi.py
saga-outbox-example/estoque/app/: apps.py  models.py  pubsub.py
saga-outbox-example/pagamentos/app/: models.py  pubsub.py
saga-outbox-example/pagamentos/management/commands/: outbox.py
saga-outbox-example/pedidos/: settings.py
saga-outbox-example/pedidos/app/: models.py  pubsub.py
